Maj notes AD  + Outils

--- a/_posts/Notes/AD/2024-04-08-AD.md
+++ b/_posts/Notes/AD/2024-04-08-AD.md
@@ -13,7 +13,7 @@ permalink: /Notes/AD/AD_Basics
 
 Well, well well... Here we are. Doing an Active Directory introduction note. Lets start by defining what is `Active directory`. Active Directory (AD), is the windows directory.  It allows interconnection between computers and/or servers. The computers and servers in a domain (computer cluster) can have any distribution in it (Unix-like or windows).
 
-I will not get into too much detail on how active directory works, what is a domain, forest... I will focus only on the different protocols and attacks on it. If you want to get more information about how an AD works, and want basic knowledge on it, I advise you the great post [Attacking Active Directory: 0 to 0.9](https://zer1t0.gitlab.io/posts/attacking_ad/).
+I will not get into too much detail on how active directory works, what is a domain, forest... I will focus only on the different protocols and attacks on it. If you want to get more information about how an AD works, and want basic or advanced knowledge on it, I advise you the great post [Attacking Active Directory: 0 to 0.9](https://zer1t0.gitlab.io/posts/attacking_ad/).
 
 ## Protocols
 
@@ -31,9 +31,9 @@ Because an image is worth a big speech:
 
 Lets break this down. Lets say you want to access a server. 
 
-- First, you have to connect to your workstation. When you enter your credentials, you request a `TGT` (Ticket Granting Ticket) to the `AS` (Authentication Service). Then, the `AS` check if you are who you pretend to be (username and hash of your password). If your credentials are valid, the `AS` will provide you with the requested `TGT`. 
+- First, you have to connect to your workstation. When you enter your credentials, you request a `TGT` (Ticket Granting Ticket) to the `AS` (Authentication Service). Then, the `AS` checks if you are who you pretend to be (username and key derived from your password). If your credentials are valid, the `AS` will provide you with the requested `TGT`.
 
-- Now, when you try to connect to a server, it will check if the `Kerberos` protocol is available for this server. If so, you will request a `ST` (Service Ticket) to the `TGS` (Ticket Granting Service). To be able to do that, the TGT is sent to the TGS so it can authenticate the client.
+- Now, when you try to connect to a server, it will check if the `Kerberos` protocol is available for this server. If so, you will request a `ST` (Service Ticket) to the `TGS` (Ticket Granting Service). To be able to do that, the `TGT` is sent to the `TGS` so it can authenticate the client.
 
 - With the `ST`, you just have to give it to the server that will check the validity of the ticket and authenticate you.
 
@@ -44,18 +44,29 @@ The `KDC` (Key Distribution Center) is the fusion of an `AS` and a `TGS`. It is 
 
 ### NTLM
 
+There is often a bit of confusion when we talk about `NTLM`. Do we speak about an authentication protocol or about a hash algorithm ? Well the authentication protocol is often called `NTLM` but the full name is `Net-NTLM`. There are different versions of this protocol like `Net-NTLMv1` or `Net-NTLMv2`. For now, only these 2 versions exist. And when we speak about a hash we just say `NTLM hash`. The `Net-NTLM hash` is the challenge + the response. But what people think of when we speak about `NTLM hash` is the `NT hash` concatenated to `LM hash`. This hash (`NT` + `LM hash`) can be used for authentication, relayed or cracked offline, where the `Net-NTLM hash` can only be cracked offline.
 
-There is often a bit of confusion when we talk about `NTLM`. Do we speak about an authentication protocol or about a hash algorithm ? Well the authentication protocol is often called `NTLM` but the full name is `Net-NTLM`. There are different version of this protocol like Net-NTLMv1 or Net-NTLMv2. For now, only these 2 versions exist. And when we speak about a hash we just say `NTLM hash`. This `NTLM hash` is the response of the server challenge. It is the challenge + the response. But what people think of when we speak about `NTLM hash` is the `NT hash` or `LM hash`. This `NTLM hash` can be realayed or cracked offline.
+**Pass The Hash** leverages a feature of Windows' `NTLM` authentication, where a user's hashed password (rather than the plaintext password) can be used for authentication across networked services, essentially allowing the hash to serve as an equivalent credential within Windows environments.
 
-> Be aware that a lot of people make no distinction between the concatenation of `NT` and `LM` hash (separated by a `:`) and the `NTLM "hash"/response` that isn't really a hash. It is just a response to the challenge sent by the server. Sometimes, the `LM/NT` hash is called NTLM hash
-{: .prompt-danger}
-
-> This `NTLM hash` can't be passed. You can't do a PtH (Pass the Hash) attack.
+> The `Net-NTLM hash` can't be passed. You can't do a PtH (Pass the Hash) attack.
 {: .prompt-danger}
 
 The client uses its `NT` hash during the `NTLM` authentication mechanism in order to calculate a response for the server.
 
-`NT` hash can be used to authenticate to several services (ex: RDP).
+`NT` hash can be used to authenticate to several services (ex: SMB, LDAP, RDP...).
+
+The following scheme shows how the NTLM authentication mechanism works:
+
+![[AD_NTLM_Prot.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/Notes/photos/AD_NTLM_Prot.png)
+
+1. First the client sends a `NEGOCIATE` message to the server. This message allows to share security information between the client and the server (ex: NTLM version to use)
+2. Then the server generates a `CHALLENGE` and sends it into a `CHALLENGE` message. (It also confirms the negotiated options and sends information about the server like computer name, version, domain name...)
+3. Now that the client has the challenge, it calculates the response using the client key (NT hash). Now, the client sends the response to the challenge to the server.
+4. Finally, the server will verify that the challenge response is correct. If so, the communication is now possible between the two and the following messages may be signed with the session key.
+
+> Note that on the step "3." the client may also create, if required, a session key and encrypts it using a key derived from the `NT Hash`. The session key is then sent to the server with the response of the challenge.
+{: .prompt-info}
+
 
 ### LDAP
 
@@ -67,25 +78,22 @@ Now that we know more about how an AD is working, we are going to talk about the
 
 ### Kerberoasting
 
-In Active Directory, a `ST` can be requested by any user for any service that is registered in the domain database through an `SPN` (Service Principal Names), regardless of whether the service is running or not.  Only  service account should have an `SPN` but sometimes a regular user has an `SPN`.
+In Active Directory, a `ST` can be requested by any user for any service that is registered in the domain database through an `SPN` (Service Principal Names), regardless of whether the service is running or not.  Only service accounts should have an `SPN` but sometimes a regular user has an `SPN`.
 
 > An `SPN` looks like `service_class/machine_name[:port][/path]`
 {: .prompt-info}
   
-The `Kerberoast` attack consist on requests `STs` for those services of regular user accounts and try to crack them to get the user passwords. Usually, the users that have services also have privileges, so these are juicy accounts.
+The `Kerberoast` attack consists of requesting `STs` for those services of regular user accounts and try to crack them to get the user passwords. Usually, the users that have services also have privileges, so these are juicy accounts.
 
 #### Enumeration / Exploitation
 
-First of all, we need a user of the domain to be able to launch this attack. Once you have that, you can use LDAP queries, Bloodhound or GetUsersSPN to find the potential vulnerable users. The basic command:
+First of all, we need a user of the domain to be able to launch this attack. Once you have that, you can use LDAP queries, Bloodhound or GetUsersSPN (from impacket) to find the potential vulnerable users. The basic command:
 
 ```bash
-GetUserSPNs.py -dc-ip $DC_IP $DOMAIN.LOCAL/$USER
+GetUserSPNs.py -request -dc-ip $DC_IP $DOMAIN/$USER:$PASSWORD -outputfile kerberoasting.hashes
 ```
 
 ![[AD_kerb_getspn.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/Notes/photos/AD_kerb_getspn.png)
-
-> You can export the result with the same command by adding the `-outputfile` flag.
-{: .prompt-tip}
 
 > You can use `hashes` instead of the user password that you own by specifying the `-hashes LM_HASH:NT_HASH`. This is called `PtH` (Pass the Hash)
 {: .prompt-tip}
@@ -102,10 +110,10 @@ Now that you exported the data with `bloodhound-python`, you can use the default
 
 ![[AD_kerb_blood.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/Notes/photos/AD_kerb_blood.png)
 
-The same thing can be done using `crackmapexec`:
+The same thing can be done using `NetExec` :
 
 ```bash
-cme ldap $DC_IP -u $USER -p "$PASSWORD" -d $DOMAIN.local --kerberoasting KERBEROASTING
+nxc ldap $DC_IP -u $USER -p "$PASSWORD" -d $DOMAIN.local --kerberoasting KERBEROASTING
 ```
 
 ![[AD_kerb_cme.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/Notes/photos/AD_kerb_cme.png)
@@ -114,7 +122,7 @@ You can now use tools like `hashcat` to try cracking the recovered hash:
 
 `hashcat -m 13100 Kerberoastables.txt /usr/share/wordlists/rockyou.txt`
 
-> Note that you can get `ST` for a service account. This won't be able to crack it because it is generated automatically by the DC. It is a 120 random characters long passwords. Good luck cracking this XD.
+> Note that you can get a `ST` for a service account. You won't be able to crack it because it is generated automatically by the DC. It is a 120 random characters long passwords. Good luck cracking this XD.
 {: .prompt-warning}
 
 ### AS-REPRoasting
@@ -131,7 +139,7 @@ GetNPUsers.py -request -format hashcat -outputfile ASREProastables.txt -dc-ip $D
 
 Here we just listed the potentially vulnerable users and exported their hash from the `TGT` in a file called `ASREProastables.txt`.
 
-If this doesn't work you can provide a user list like so:
+If this doesn't work or if you don't have a valid pair of credentials you can provide a user list like so:
 
 ![[AD_kerb_getnpuser.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/Notes/photos/AD_kerb_getnpuser.png)
 
@@ -151,7 +159,7 @@ First of all, Golden and Silver tickets are used for persistence. This mean that
 
 #### Silver Tickets
 
-Lets start with silver tickets. A `Silver Ticket` grants us access to a specific service. It allows us to generate a ST (Service Ticket) for this service. To do that, we need to know the kerberos key of this service account. To recover this key you can, for example, dump the `lsass` process. Tools like [mimikatz](https://github.com/gentilkiwi/mimikatz/wiki/module-~-kerberos#golden--silver) (`kerberos::golden`) or the impacket [ticketer.py](https://github.com/SecureAuthCorp/impacket/blob/master/examples/ticketer.py) can be used to do that.
+Lets start with silver tickets. A `Silver Ticket` grants us access to a specific service. It allows us to generate a ST (Service Ticket) for this service. To do that, we need to know the kerberos key of this service account. To recover this key you can, for example, dump the `lsass` process or use tools like `secretsdump` (stealthier). Tools like [mimikatz](https://github.com/gentilkiwi/mimikatz/wiki/module-~-kerberos#golden--silver) (`kerberos::golden`) or the impacket [ticketer.py](https://github.com/SecureAuthCorp/impacket/blob/master/examples/ticketer.py) can be used to do that.
 
 #### Golden Tickets
 
@@ -159,7 +167,7 @@ Lets start with silver tickets. A `Silver Ticket` grants us access to a specific
 
 ### Delegations
 
-Delegation is a mechanism in which a machine (the delegation server) can impersonate a user on a service. This means that the service think that the user ask for the resource where in reality it is the delegation server that is asking the resource to the server and then forward it to the user.
+Delegation is a mechanism in which a machine (the delegation server) can impersonate a user on a service. This means that the service thinks that the user ask for the resource where in reality it is the delegation server that is asking the resource to the server and then forward it to the user.
 
 I will not get into too much detail here. you can have more information about the delegation on [the hacker recipes](https://www.thehacker.recipes/a-d/movement/kerberos/delegations) or [hackndo](https://en.hackndo.com/constrained-unconstrained-delegation/). They both are inspired by the article of Elad Shamir [Wagging the Dog](https://shenaniganslabs.io/2019/01/28/Wagging-the-Dog.html) and this article is much more detailed than the two previous blogs. [Here](https://youtu.be/byykEId3FUs) is also a talk about delegation presented by Shutdown ([@nwodtuhs](https://twitter.com/_nwodtuhs)). (The french version [here](https://www.youtube.com/watch?v=7_iv_eaAFyQ)).
 
@@ -175,9 +183,9 @@ This type of delegation was the first one created. It is not recommended to use 
 |                                                   **Source: HacknDo**                                                   |
 
 
-The client connect to the service by sending its `ST`. Inside his `ST`, the `DC` puts a copy of the user's `TGT`. That service uses this `TGT` to impersonate the client to any other service.
+The client connects to the service by sending its `ST`. Inside his `ST`, the `DC` puts a copy of the user's `TGT`. That service uses this `TGT` to impersonate the client to any other service.
 
-To exploit the delegation mechanisms, you'll need the hash of the service account or being admin of the machine.
+To exploit the delegation mechanism, you'll need the hash of the service account or being admin of the machine.
 
 Here we will have as an exemple an unconstrained delegation between `PC` and `DC`.
 
@@ -215,7 +223,7 @@ And now we can use it to use command with this ticket like `SecretsDump` for exe
 
 Lets say that you try to connect to a service that uses the `Net-NTLM` authentication mechanism. `Net-NTLM` doesn't use tickets, it is not related to `Kerberos`. This means that the delegation mechanism can't work because it relies on the use of `ST`. 
 
-> `Protocol Transition` (PT) is the name of this mechanism. `PT` is the mechanism that allow connection from other protocols than `Kerberos` on a `Kerberos` environment. Protocol Transition is only applicable to `Constrained Delegation`, not RBCD. It does not allow a connection from another protocol, it allows a delegation from another protocol to kerberos.
+> `Protocol Transition` (PT) is the name of this mechanism. `PT` is the mechanism that allows connection from other protocols than `Kerberos` on a `Kerberos` environment. It does not allow a connection from another protocol, it allows a delegation from another protocol to kerberos.
 {: .prompt-info}
 
 This is where the `Protocol transition` (PT) enter the scene. This will allow us to get a valid ST for our own service using `S4U2Self` for the user that just authenticated using `Net-NTLM` or an attacker can use it to impersonate any user on our service machine like the admin for example. 
@@ -224,7 +232,7 @@ This is where the `Protocol transition` (PT) enter the scene. This will allow us
 
 #### S4U2Proxy
 
-`S4U2Proxy` as `S4U2Self` is also an extension of `Kerberos`. It allows the delegation server to ask for a `ST` for "any" user and usable on any service on which it has permission to delegate (only works with `Kerberos`). To be able to do that, `S4U2Proxy` needs a forwardable `ST`. The `forwardable` flag of a `ST` can be obtained thanks to `S4U2Self` (only if the two upper conditions specified in the `S4U2Self` section are not set).
+`S4U2Proxy` as `S4U2Self` is also an extension of `Kerberos`. It allows the delegation server to ask for a `ST` for "any" user and use it on any service on which it has permission to delegate (only works with `Kerberos`). To be able to do that, `S4U2Proxy` needs a forwardable `ST`. The `forwardable` flag of a `ST` can be obtained thanks to `S4U2Self` (only if the two upper conditions specified in the `S4U2Self` section are not set).
 
 #### Constrained Delegation
 
@@ -234,7 +242,7 @@ Then the `Constrained Delegation` was created. Here, the constrained delegation 
 | :---------------------------------------------------------------------------------------------------------------------: |
 |                                                   **Source: HacknDo**                                                   |
 
-The `Contrained Delegation` server ask the DC (Domain Controller) if it can receive a `ST` (Service Ticket) as the specified user. This is possible thanks to [Self4U2Self](#S4U2Self)
+The `Contrained Delegation` server ask the DC (Domain Controller) if it can receive a `ST` (Service Ticket) as the specified user. This is possible thanks to [S4U2Proxy](#S4U2Proxy).
 
 > Note that the information about if the `Constrained Delegation` server is allowed or not to impersonate a user on a specific server is stored in the DC not on the `Constrained Delegation` server.
 {: .prompt-note}
@@ -248,7 +256,7 @@ To exploit the `Constrained Delegation`, we first need to find it using the foll
 findDelegation.py $DOMAIN/$USER:$PASSWORD -target-domain $TARGET_DOMAIN
 ```
 
-Now there is two scenarios. The first one is if there is protocol transition on the service that has the right to delegate.
+Now there are two scenarios. The first one is if there is protocol transition on the service that has the right to delegate.
 
 ##### With protocol transition
 
@@ -313,7 +321,7 @@ wmiexec.py -k -no-pass $DOMAIN$/administrator@$DC_NAME
 
 #### Resource Based Constrained Delegation
 
-`Resource Based Constrained Delegation` (RBCD) works the other way around. It is not the `RBCD` server that check if it has the right to impersonate the service (ex: web server).The machine account can change its own attribute and not only the DA can change it on the DC. If the machine is compromised, then we can get the hash of the machine account and then continue the attack. This means that if you create a machine (MachineAccountQuota > 0) then you can specify that a specific server can impersonate your machine.
+`Resource Based Constrained Delegation` (RBCD) works the other way around. It is not the `RBCD` server that checks if it has the right to impersonate the service (ex: web server).The machine account can change its own attribute and not only the DA can change it on the DC. If the machine is compromised, then we can get the hash of the machine account and then continue the attack. This means that if you create a machine (MachineAccountQuota > 0) then you can specify that a specific server can impersonate your machine.
 
 | ![[resource_based_constrained_delegation_schema.png]](https://en.hackndo.com/assets/uploads/2019/02/resource_based_constrained_delegation_schema.png) |
 | :---------------------------------------------------------------------------------------------------------------------------------------------------: |
@@ -381,7 +389,51 @@ certipy find -u "$USER@$DOMAIN" -p "$PASSWORD" -dc-ip "$DC_IP" -vulnerable
 ```
 
 The output should look like this:
-IMAGE
+```
+Certificate Authorities
+ 0
+   CA Name                             : CORP-CA
+   DNS Name                            : CA.CORP.LOCAL
+   ...
+   Web Enrollment
+     HTTP
+       Enabled                         : False
+     HTTPS
+       Enabled                         : True
+       Channel Binding (EPA)           : False
+   ...
+   Permissions
+     Access Rights
+       ManageCa                        : CORP.LOCAL\Authenticated Users
+       ManageCertificates              : CORP.LOCAL\Authenticated Users
+       Read                            : CORP.LOCAL\Authenticated Users
+       Enroll                          : CORP.LOCAL\Authenticated Users
+   [+] User Enrollable Principals      : CORP.LOCAL\Authenticated Users
+   [+] User ACL Principals             : CORP.LOCAL\Authenticated Users
+   [!] Vulnerabilities
+     ESC7                              : User has dangerous permissions.
+     ESC8                              : Web Enrollment is enabled over HTTPS and Channel Binding is disabled.
+Certificate Templates
+  0
+    Template Name                       : UserTemplate
+    Display Name                        : UserTemplate
+    Certificate Authorities             : CORP-CA
+    Enabled                             : True
+    Client Authentication               : True
+    ...
+    Enrollee Supplies Subject           : True
+    Certificate Name Flag               : EnrolleeSuppliesSubject
+    Extended Key Usage                  : Client Authentication
+    ...
+    Permissions
+      Enrollment Permissions
+        Enrollment Rights               : CORP.LOCAL\Domain Users
+      Object Control Permissions
+        Write Property Enroll           : CORP.LOCAL\Domain Users
+    [+] User Enrollable Principals      : CORP.LOCAL\Domain Users
+    [!] Vulnerabilities
+      ESC1                              : Enrollee supplies subject and template allows client authentication.
+```
 
 ##### ESC1
 
@@ -399,7 +451,7 @@ certipy auth -pfx administrator.pfx -dc-ip $DC_IP
 
 ##### ESC2 /ESC3
 
-With `ESC2` and `ESC3` are using the enrollment agent to request a certificate. As for `ESC1`, we use `certipy` to request a certificate:
+With `ESC2` and `ESC3` are using the enrolment agent to request a certificate. As for `ESC1`, we use `certipy` to request a certificate:
 
 ```bash
 certipy req -u $USER@$DOMAIN.local -p $PASSWORD -target $CA_SERVER.$DOMAIN.local -template ESC2 -ca $CA_NAME
@@ -472,7 +524,7 @@ As for `ESC5`, `ESC7` is also not common and used so here is [another link](http
 
 ##### ESC8
 
-`ESC8` is a bit different. We don't request directly a certificate and use it to get the administrator `NT` hash. Here we are going to use NTLM Relay (this attack will be explained in more detail in the next chapter). But the main idea is that we are going to receive a connexion with a `Coertion` for exemple (`Coertion` is the action to force a machine account to authenticate to us.) and then use this received connexion to relay it to the same protocol or a different one (for more information check out the `NTLM relay` chapter). For more simple exemple, we are going to use `certipy` that will do the NTLM relay for us.
+`ESC8` is a bit different. We don't request directly a certificate and use it to get the administrator `NT` hash. Here we are going to use NTLM Relay (this attack will be explained in more details in the next chapter). But the main idea is that we are going to receive a connexion with a `Coertion` for exemple (`Coertion` is the action to force a machine to authenticate to us.) and then use this received connexion to relay it to the same protocol or a different one (for more information check out the `NTLM relay` chapter). For more simple exemple, we are going to use `certipy` that will do the NTLM relay for us.
 
 First, we use `certipy` as a listener:
 
@@ -501,14 +553,39 @@ certipy auth -pfx CERTIFICATE.pfx -dc-ip $DC_IP
 
 ### NTLM Relay
 
-Coming soon
+First of all, NTLM is NOT an isolated protocol that generates network traffic. It is only a `authentication protocol`. It must be embedded in applications protocols like `SMB`, `LDAP`or `HTTP` to work.
+
+> You can have more information on the NTLM protocol on [this section](https://nouman404.github.io/Notes/AD/AD_Basics#ntlm).
+{: .prompt-info}
+
+The NTLM relay is using MiTM (Man in The Middle) attack. We need to be between the client and the server. The goal here is that the server believes that we (the attacker) are the client and that the client believe that we (the attacker) are the server. But if you remember the challenge/response scheme from the NTLM section, we need the `NT Hash` of the user to be able to calculate the response to the challenge and we don't have it. So this is when the MiTM become useful. 
+
+![[AD_Relay_Scheme_bbto.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/Notes/photos/AD_Relay_Scheme_bbto.png)
+
+As we can see on the scheme, the attacker receives the `NEGOCIATE` message from the client that thinks it sent it to the server. The attacker then sends the `NEGOCIATE` message to the server that thinks the client is starting a new communication. Then the full challenge/response is done the same way as for the negotiation part without the client nor the server knowing that the attacker is receiving and sending everything. Now, we have a session as the client on the server and we can act as him.
+
+> Note that this isn't possible if protocols are signed (ex: SMB with signing True, HTTPS, LDAP with channel binding enabled). This is because we will have a session as this user but because we don't have his password we can't sign the messages that follow the authentication part. The server will see that the messages are not signed correctly and it will drop the connection.
+{: .prompt-danger}
+
+You can see on the following image the protocols that can be relayed. Some can be relayed from one another and some can't. This is due to how they manage their authentication mechanism:
+
+| ![[AD_Relay_Sheme_hackerRecipes.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/Notes/photos/AD_Relay_Sheme_hackerRecipes.png) |
+| :-----------------------------------: |
+|     **Source: [thehackerrecipes](https://www.thehacker.recipes/ad/movement/ntlm/relay)**      |
+
+> Note that it is not possible to relay from `SMB` to `LDAP` (except using `CVE-2019-1040`)
+{: .prompt-warning}
+
+### NTLM Relay - Exemple
+
+We can use tools like [Responder](https://nouman404.github.io/Notes/Tools#responder) and [ntrlmrelayx](https://nouman404.github.io/Notes/Tools#ntlmrelayx) to do some relay. You can find examples on how to use those tools on the provided links. 
 
 ### DCSync
 
 
 We have seen a lot of attacks by now on an AD. Some of them allowed us to get `domain admin` access (access over all the domain like DC and servers). When we are `domain admin` or if we have a user with `DCSync` right, a cool thing to do is to recover every hash of every user and every machine. And when we do that, we can connect as any user on any machine (if it is allowed). Hence, because we also have the `domain admin` hash, we can connect with it on any machine of the domain.
 
-This attack is called [DCSync](https://www.thehacker.recipes/a-d/movement/credentials/dumping/dcsync)  (dump of the DC information). We can use tools like `secretsdump` to do that using a Kerberos ticket : 
+This mechanism is called [DCSync](https://www.thehacker.recipes/a-d/movement/credentials/dumping/dcsync)  (dump of the DC information). It can be use by domain administrators for backups and by attackers to retrieve credentials. We can use tools like `secretsdump` to do that using a Kerberos ticket : 
 
 ```bash
 export KRB5CCNAME=/workspace/esc8/CCACHE_FILE.ccache
@@ -520,4 +597,3 @@ Or, we could just dump all the hash of the domain using the `NT` hash instead of
 ```bash
 secretsdump -hashes ":$NT_HASH_OF_DC_ACC" -no-pass $DOMAIN.LOCAL/"$MACHINE"@$DC_NAME.$DOMAIN.local
 ```
-
