--- a/_posts/Notes/AD/2024-04-08-Tools.md
+++ b/_posts/Notes/AD/2024-04-08-Tools.md
@@ -1,4 +1,11 @@
-
+---
+title: Notes | AD | AD Basics
+author: BatBato
+date: 2025-08-08
+categories: [Notes, AD]
+tags: [AD, Nmap, Gobuster, Certipy, Ntlmralyx]
+permalink: /Notes/AD/Tools
+---
 
 
 # Introduction
