Patch URL mismatch

--- a/_posts/Notes/AD/2024-04-08-AD.md
+++ b/_posts/Notes/AD/2024-04-08-AD.md
@@ -578,7 +578,7 @@ You can see on the following image the protocols that can be relayed. Some can b
 
 ### NTLM Relay - Exemple
 
-We can use tools like [Responder](https://nouman404.github.io/Notes/Tools#responder) and [ntrlmrelayx](https://nouman404.github.io/Notes/Tools#ntlmrelayx) to do some relay. You can find examples on how to use those tools on the provided links. 
+We can use tools like [Responder](https://nouman404.github.io/Notes/AD/Tools#responder) and [ntrlmrelayx](https://nouman404.github.io/Notes/AD/Tools#ntlmrelayx) to do some relay. You can find examples on how to use those tools on the provided links. 
 
 ### DCSync
 
