Patch prompt not printed our

--- a/_posts/Notes/AD/2024-04-08-AD.md
+++ b/_posts/Notes/AD/2024-04-08-AD.md
@@ -232,7 +232,7 @@ This is where the `Protocol transition` (PT) enter the scene. This will allow us
 
 #### S4U2Proxy
 
-`S4U2Proxy` as `S4U2Self` is also an extension of `Kerberos`. It allows the delegation server to ask for a `ST` for "any" user and use it on any service on which it has permission to delegate (only works with `Kerberos`). To be able to do that, `S4U2Proxy` needs a forwardable `ST`. The `forwardable` flag of a `ST` can be obtained thanks to `S4U2Self` (only if the two upper conditions specified in the `S4U2Self` section are not set).
+`S4U2Proxy` as `S4U2Self` is also an extension of `Kerberos`. It allows the delegation server to ask for a `ST` for "any" user and use it on any service on which it has permission to delegate (only works with `Kerberos`). To be able to do that, `S4U2Proxy` needs a `forwardable ST`. The `forwardable` flag of a `ST` can be obtained thanks to `S4U2Self` (only if the two upper conditions specified in the `S4U2Self` section are not set).
 
 #### Constrained Delegation
 
@@ -245,7 +245,7 @@ Then the `Constrained Delegation` was created. Here, the constrained delegation 
 The `Contrained Delegation` server ask the DC (Domain Controller) if it can receive a `ST` (Service Ticket) as the specified user. This is possible thanks to [S4U2Proxy](#S4U2Proxy).
 
 > Note that the information about if the `Constrained Delegation` server is allowed or not to impersonate a user on a specific server is stored in the DC not on the `Constrained Delegation` server.
-{: .prompt-note}
+{: .prompt-info}
 
 > Only DA (Domain Admin) can change the delegation rights. 
 {: .prompt-warning}
